# riyadh_poc

./: .env  .gitignore  Dockerfile  pyproject.toml  setup.sh
app/: database.py  exporter.py  extractor.py  llm_parser.py  main.py  metadata_prompt.py  models.py  parser.py  template_matcher.py
app/static/: index.html
config/: metadata.cfg
contract_metadata_extractor.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
data/: contracts.db
tests/: test_api.py  test_parser.py
