[project]
name = "contract-metadata-extractor"
version = "0.1.0"
description = "Upload contracts, extract metadata and clause sets with OCR fallback"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.116.0",
  "uvicorn[standard]>=0.35.0",
  "python-multipart>=0.0.20",
  "pypdf>=5.4.0",
  "python-docx>=1.1.2",
  "pillow>=11.1.0",
  "pymupdf>=1.26.0",
  "pytesseract>=0.3.13",
  "openpyxl>=3.1.5"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.5",
  "httpx>=0.28.1",
  "ruff>=0.11.0"
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["config*"]
namespaces = false

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
